# MyCppPlaner

./: .gitignore  CMakeLists.txt  README.md
include/: register_window.h
include/managers/: app_state_manager.h  notification_manager.h  password_manager.h  settings_manager.h  tasks_manager.h  window_manager.h
include/windows/: base_window.h  main_window.h  register_window.h
src/: main.cpp  main_window.cpp
src/managers/: app_state_manager.cpp  notification_manager.cpp  password_manager.cpp  settings_manager.cpp  tasks_manager.cpp  window_manager.cpp
src/windows/: base_window.cpp  main_window.cpp  register_window.cpp
